# StockTradingSystem

./: CMakeLists.txt  README.md  main.cpp  mainOld.cpp
include/: order.h  orderBook.h  trader.h
src/: order.cpp  orderBook.cpp  trader.cpp  traderOld.cpp
